<resources>
    <string name="app_name">fitnessapp</string>
    <string name="onboarding_step_1_desc">Podaj nam swoje imię, abyśmy mogli się do Ciebie zwracać.</string>
    <string name="onboarding_name_hint">Twoje imię / nazwa</string>
    <string name="onboarding_goal_strength">Siła</string>
    <string name="onboarding_goal_balance">Równowaga</string>
    <string name="onboarding_goal_mobility">Mobilność</string>
    <string name="onboarding_goal_cardio">Kardio</string>
    <string name="onboarding_goal_posture">Postura</string>
    <string name="onboarding_goal_mixed">Mieszana</string>
    <string name="onboarding_no_conditions">Brak schorzeń</string>
    <string name="group_back">Plecy i kręgosłup</string>
    <string name="cond_low_back_pain">Ból dolnych pleców</string>
    <string name="cond_upper_back_pain">Ból górnych pleców</string>
    <string name="cond_spine_stiffness">Sztywność kręgosłupa</string>
    <string name="cond_bad_posture">Lordoza / garb / zła postura</string>
    <string name="group_balance">Równowaga i upadki</string>
    <string name="cond_fall_prevention">Profilaktyka upadków</string>
    <string name="cond_balance_issues">Problemy z równowagą</string>
    <string name="cond_balance_disorders">Zaburzenia równowagi</string>
    <string name="cond_dizziness">Zawroty głowy</string>
    <string name="group_joints">Stawy i kości</string>
    <string name="cond_arthritis">Zapalenie stawów</string>
    <string name="cond_knee_pain">Ból kolan</string>
    <string name="cond_osteoporosis">Osteoporoza</string>
    <string name="cond_hip_pain">Ból bioder</string>
    <string name="cond_ankle_pain">Ból kostek</string>
    <string name="welcome_personalized">Witaj %s!</string>
    <string name="finish">Zakończ</string>
    <string name="next">Dalej</string>
    <string name="assistant_title">Asystent Aktywności</string>
    <string name="login_google">Zaloguj się przez Google</string>
    <string name="or">lub</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="email_hint">twoj@email.com</string>
    <string name="password_hint">Wpisz hasło</string>
    <string name="login_btn">Zaloguj się</string>
    <string name="register_btn">Zarejestruj się</string>
    <string name="recommendations_title">Rekomendacje</string>
    <string name="no_exercises_for_category">Nie znaleziono ćwiczeń w kategorii: %1$s</string>
    <string name="no_exercises_found">Brak ćwiczeń spełniających Twoje kryteria bezpieczeństwa.</string>
    <string name="exercise_subtitle_fmt">Kategoria: %1$s • Trudność: %2$d • Intensywność: %3$d</string>
    <string name="exercise_details_title">Szczegóły ćwiczenia</string>
    <string name="exercise_category_fmt">Kategoria: %1$s</string>
    <string name="exercise_difficulty_fmt">Poziom trudności: %1$d</string>
    <string name="exercise_intensity_fmt">Intensywność: %1$d</string>
    <string name="exercise_flags_fmt">Krzesło: %1$s • W łóżku: %2$s • Siedząc: %3$s • Stanie: %4$s • Podłoga: %5$s</string>
    <string name="exercise_impacts_fmt">Siła: %1$d • Elastyczność: %2$d • Kardio: %3$d • Postawa: %4$d</string>
    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="instruction_label">Instrukcja:</string>
    <string name="contraindications_label">Przeciwwskazania:</string>
    <string name="exercise_step_fmt">ĆWICZENIE %1$d Z %2$d</string>
    <string name="video_button">WIDEO</string>
    <string name="back_button">POWRÓT</string>
    <string name="previous">Poprzednie</string>
    <string name="difficulty_medium">Średnie</string>
    <string name="difficulty_hard">Trudne</string>
    <string name="exercise_saved">Ćwiczenie zapisane w historii</string>
    <string name="training_plan_ready">Przygotowałam plan treningowy. Jeśli potrzebujesz pomocy, powiedz: POMOC. Ćwiczenie 1: %1$s</string>
    <string name="step2_announcement">Krok drugi: zobacz wideo i sprawdź przeciwwskazania.</string>
    <string name="no_description">Brak opisu ćwiczenia.</string>
    <string name="no_description_short">Brak opisu.</string>
    <string name="none">Brak.</string>
    <string name="vh_title">KOMENDY GŁOSOWE</string>
    <string name="vh_navigation_title">NAWIGACJA</string>
    <string name="vh_navigation_desc">• główna - strona główna\n• wstecz - wróć\n• ćwiczenia - przejdź do ćwiczeń\n• gry - przejdź do gier\n• ustawienia - otwórz ustawienia</string>
    <string name="vh_general_title">OGÓLNE</string>
    <string name="vh_general_desc">• pomoc - pokaż listę\n• stop - zatrzymaj mówienie\n• czytaj - przeczytaj ekran\n• powtórz - powtórz wiadomość</string>
    <string name="vh_exercises_title">ĆWICZENIA</string>
    <string name="vh_exercises_desc">• następne ćwiczenie - przejdź dalej\n• start lub zaczynamy - rozpocznij\n• zakończ lub koniec - zakończ trening\n• czytaj opis - przeczytaj opis ćwiczenia</string>
    <string name="vh_games_title">GRY</string>
    <string name="vh_games_desc">• łatwy, średni, trudny - wybierz poziom\n• start - rozpocznij grę\n• nowa gra - zacznij od nowa</string>
    <string name="exercise_name_placeholder">Nazwa ćwiczenia</string>
    <string name="exercise_desc_placeholder">Opis</string>
    <string name="onboarding_step1_question">Jak masz na imię?</string>
    <string name="onboarding_step2_title">W JAKICH POZYCJACH\nMOŻESZ ĆWICZYĆ?</string>
    <string name="onboarding_step2_subtitle">Zaznacz wszystkie pozycje, w których czujesz się komfortowo</string>
    <string name="onboarding_step2_select_all">Wszystkie pozycje</string>
    <string name="position_standing">Stojąc</string>
    <string name="position_standing_desc">Bez podparcia lub z lekkim podparciem</string>
    <string name="position_floor">Na podłodze</string>
    <string name="position_floor_desc">Klęcząc lub leżąc na macie</string>
    <string name="position_chair">Z krzesłem</string>
    <string name="position_chair_desc">Ćwiczę z wykorzystaniem krzesła jako podpory</string>
    <string name="position_bed">Leżąc w łóżku</string>
    <string name="position_bed_desc">Delikatne ćwiczenia rehabilitacyjne</string>
    <string name="position_sitting">Siedząc</string>
    <string name="position_sitting_desc">Ćwiczenia w pozycji siedzącej</string>
    <string name="onboarding_step4_title">Co jest Twoim głównym celem?</string>
    <string name="onboarding_step5_title">Czy masz jakieś schorzenia lub problemy zdrowotne?</string>
    <string name="nav_home">Home</string>
    <string name="nav_exercises">ćwiczenia</string>
    <string name="nav_settings_label">Ustawienia</string>
    <string name="welcome_fallback">Witaj Użytkowniku!</string>
    <string name="mood_question">Jak się dzisiaj czujesz?</string>
    <string name="mood_happy_label">Czuję się\ndobrze</string>
    <string name="mood_happy_desc">Dobry nastrój</string>
    <string name="mood_sad_label">Jestem\nzmęczony</string>
    <string name="mood_sad_desc">Zmęczenie</string>
    <string name="mood_very_sad_label">Nie czuję się\ndobrze</string>
    <string name="mood_very_sad_desc">Zły nastrój</string>
    <string name="choice_title">Co chcesz\npoćwiczyć?</string>
    <string name="choice_subtitle">Wybierz obszar treningu</string>
    <string name="body_label">Ciało</string>
    <string name="body_subtitle">Siła i równowaga</string>
    <string name="body_icon_desc">Ikona ciała</string>
    <string name="mind_label">Umysł</string>
    <string name="mind_subtitle">Pamięć i koncentracja</string>
    <string name="mind_icon_desc">Ikona umysłu</string>
    <string name="game_2048_score">0</string>
    <string name="game_2048_up">▲</string>
    <string name="game_2048_left">◀</string>
    <string name="game_2048_down">▼</string>
    <string name="game_2048_right">▶</string>
    <string name="game_2048_start_voice">Gra 2048. Twój cel to %1$d. Przesuwaj kafelki aby łączyć te same liczby.</string>
    <string name="game_2048_new_game_voice">Zaczynamy od nowa.</string>
    <string name="game_2048_move_up_voice">Góra</string>
    <string name="game_2048_move_down_voice">Dół</string>
    <string name="game_2048_move_left_voice">Lewo</string>
    <string name="game_2048_move_right_voice">Prawo</string>
    <string name="game_2048_help_voice">Mów góra, dół, lewo lub prawo aby przesuwać kafelki.</string>
    <string name="game_2048_status_voice">Gra 2048. Twój wynik to %1$d</string>
    <string name="game_2048_win_toast">Gratulacje! Cel osiągnięty!</string>
    <string name="game_2048_win_voice">Gratulacje! Cel %1$d osiągnięty! Wygrałeś!</string>
    <string name="game_2048_game_over_toast">Koniec gry! Nie ma więcej ruchów.</string>
    <string name="game_2048_game_over_voice">Koniec gry! Nie ma więcej możliwych ruchów. Twój wynik to %1$d.</string>
    <string name="game_2048_instruction">Połącz kafelki, aby zdobyć %1$d</string>
    <string name="game_2048_restart">Zacznij od nowa</string>
    <string name="memory_score">0</string>
    <string name="memory_moves">0</string>
    <string name="color_tap_score_fmt">Wynik: %1$d</string>
    <string name="color_tap_level_fmt">Poziom %1$d</string>
    <string name="color_tap_start_voice">Gra Kolory. Powtarzaj sekwencję kolorów.</string>
    <string name="color_tap_new_game_voice">Nowa gra.</string>
    <string name="color_tap_help_voice">Obserwuj sekwencję kolorów i ją powtórz.</string>
    <string name="color_tap_status_voice">Gra Kolory. Poziom %1$d. Wynik: %2$d</string>
    <string name="color_tap_watch">Patrz!</string>
    <string name="color_tap_remember">Zapamiętaj sekwencję...</string>
    <string name="color_tap_good">Dobrze!</string>
    <string name="color_tap_repeat">Powtórz sekwencję!</string>
    <string name="color_tap_your_turn_voice">Twoja kolej. Powtórz sekwencję.</string>
    <string name="color_tap_oops">Ups!</string>
    <string name="color_tap_try_again">Spróbuj jeszcze raz.</string>
    <string name="color_tap_error_voice">Niestety błąd. Spróbuj jeszcze raz.</string>
    <string name="color_tap_great">Świetnie!</string>
    <string name="color_tap_next_level_voice">Świetnie! Przechodzisz do poziomu %1$d</string>
    <string name="liquid_start_voice">Gra Płyny. Sortuj kolory przelewając płyny między probówkami.</string>
    <string name="liquid_reset_voice">Resetuję poziom.</string>
    <string name="liquid_next_level_voice">Następny poziom.</string>
    <string name="liquid_help_voice">Kliknij na probówkę aby ją wybrać, a następnie na drugą aby przelać płyn.</string>
    <string name="liquid_status_voice">Gra Płyny. Poziom %1$d. %2$s</string>
    <string name="liquid_status_unsorted">Wszystkie probówki są jeszcze nieposortowane.</string>
    <string name="liquid_status_progress">Uzupełniono %1$d z %2$d kolorów.</string>
    <string name="liquid_level_fmt">Poziom %1$d</string>
    <string name="liquid_win_toast">Brawo! Poziom ukończony!</string>
    <string name="liquid_win_voice">Brawo! Poziom ukończony!</string>
    <string name="score_title">WYNIK</string>
    <string name="moves_title">RUCHY</string>
    <string name="play_again_btn">Zagraj ponownie</string>
    <string name="memory_title">Gra Memory</string>
    <string name="liquid_reset_btn">Resetuj Poziom</string>
    <string name="liquid_next_btn">Następny Poziom</string>
    <string name="exit_btn">Wyjdź</string>
    <string name="dialog_exit_title">Wyjście z aplikacji</string>
    <string name="dialog_exit_message">Czy na pewno chcesz wyjść z aplikacji?</string>
    <string name="dialog_exit_confirm">Tak, wyjdź</string>
    <string name="dialog_exit_cancel">Nie, zostaję</string>
    <string name="date_label">Data</string>
    <string name="exercise_name_label">Nazwa ćwiczenia</string>
    <string name="category_label">Kategoria</string>
    <string name="win_congrats">BRAWO!!!!</string>
    <string name="increase_level">Zwiększ poziom</string>
    <string name="play_again">Zagraj jeszcze raz</string>
    <string name="exit">Wyjdź</string>
</resources>