<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/onboarding_step_4_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_goal_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/onboarding_goal_strength" />

        <RadioButton
            android:id="@+id/rb_goal_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_balance" />

        <RadioButton
            android:id="@+id/rb_goal_mobility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_mobility" />

        <RadioButton
            android:id="@+id/rb_goal_cardio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_cardio" />

        <RadioButton
            android:id="@+id/rb_goal_posture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_posture" />

        <RadioButton
            android:id="@+id/rb_goal_mixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_mixed" />
    </RadioGroup>

</LinearLayout>